--- a/src/Core_kernel.fsproj
+++ b/src/Core_kernel.fsproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- This is named [Core_kernel] instead of [Core] since [Core] aliases to [Fsharp.Core] -->
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
@@ -68,6 +68,8 @@
     <Compile Include="User_groups.fs" />
     <Compile Include="Command.fsi" />
     <Compile Include="Command.fs" />
+    <Compile Include="Concurrent_bag.fsi" />
+    <Compile Include="Concurrent_bag.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\generated\Core_kernel.Bin_prot_generated_types.fsproj" />
