--- a/test/Core_kernel.Test.fsproj
+++ b/test/Core_kernel.Test.fsproj
@@ -8,8 +8,8 @@
     <EmbedAllSources>true</EmbedAllSources>
     <DebugType>embedded</DebugType>
   </PropertyGroup>
-
   <ItemGroup>
+    <Compile Include="Pipe_test.fs" />
     <Compile Include="Error.fs" />
     <Compile Include="Time.fs" />
     <Compile Include="Host_and_port.fs" />
@@ -20,13 +20,11 @@
     <Compile Include="String_extensions.fs" />
     <Compile Include="Task_test.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="nunit" Version="3.13.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="../src/Core_kernel.fsproj" />
   </ItemGroup>
